<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frying_pan_empty_assorted_spices_activity_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/daily_recipe_txt"
        app:srcCompat="@drawable/image_welcomeactivity_title" />

    <TextView
        android:id="@+id/title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/first_page_text"
        android:textAlignment="center"
        android:textColor="#B2B7C6"
        android:textSize="14sp" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_btn"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="@dimen/dim_btn"
        android:backgroundTint="@color/orange"
        android:text="@string/reg_btn"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:text="@string/login"
        />

</LinearLayout>