<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".RecipeDetails">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="29dp"
        android:backgroundTint="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"

        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/mealtime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Завтрак"
        android:textColor="@color/blue_for_mealtimes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Recipe_toast_strawberry_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mealtime_title" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:button="@drawable/ic_favorite_false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipe_name"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/toasts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name"
        app:srcCompat="@drawable/image_ready_toasts" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:numStars="5"
        android:theme="@style/CustomRatingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

    <TextView
        android:id="@+id/cooking_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/image_timer"
        android:drawablePadding="5dp"
        android:paddingTop="20dp"
        android:text="10 мин"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/image_calories"
        android:drawablePadding="5dp"
        android:paddingTop="10dp"
        android:text="100 калорий"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cooking_time" />

    <TextView
        android:id="@+id/details_ingredient_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/ingredients"
        android:textColor="@color/dark_grey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toasts" />

    <LinearLayout
        android:id="@+id/ingredient_image_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_ingredient_title">

        <ImageView
            android:id="@+id/sugar_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_powderedsugar" />

        <ImageView
            android:id="@+id/butter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_butter" />

        <ImageView
            android:id="@+id/eggs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_eggs" />

        <ImageView
            android:id="@+id/water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_water" />

        <ImageView
            android:id="@+id/strawberry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_strawberry" />

        <ImageView
            android:id="@+id/grapes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grapes" />
    </LinearLayout>

    <TextView
        android:id="@+id/details_recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/rec_steps_title"
        android:textColor="@color/dark_grey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredient_image_list" />

    <ScrollView
        android:id="@+id/scrollView_Steps"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/details_recipe_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_ellipse"
                android:drawablePadding="5dp"
                android:text="@string/step_1" />

            <TextView
                android:id="@+id/step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_ellipse"
                android:drawablePadding="5dp"
                android:text="@string/step_2" />

            <TextView
                android:id="@+id/step3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_ellipse"
                android:drawablePadding="5dp"
                android:text="@string/step_3" />

            <TextView
                android:id="@+id/step4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_ellipse"
                android:drawablePadding="5dp"
                android:text="@string/step_4" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/bon_appetit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableEnd="@drawable/image_smile"
        android:drawablePadding="5dp"
        android:text="@string/bon_appetit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_Steps" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_20"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dim_20"
        android:backgroundTint="@color/orange"
        android:text="@string/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bon_appetit_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>