<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/frying_pan_empty_assorted_spices_activity_background">

    <TextView
        android:id="@+id/textView_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_recipe_txt"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_main"
        app:layout_constraintVertical_bias="0.14" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_20"
        android:layout_marginEnd="@dimen/dim_20"
        app:counterEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        app:layout_constraintVertical_bias="0.065"
        android:textColorHint="@color/reg_ic_color"
        app:boxBackgroundMode="none"
        app:boxStrokeColor="@color/reg_ic_color"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/reg_ic_color"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:hintTextColor="@color/reg_ic_color"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/reg_ic_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_20"
        android:layout_marginEnd="@dimen/dim_20"
        app:boxBackgroundMode="none"
        app:counterEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.12"
        app:hintTextColor="@color/reg_ic_color"
        android:textColorHint="@color/reg_ic_color"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
        app:startIconTint="@color/reg_ic_color"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/dark_grey"
            android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dim_btn"
        android:layout_marginEnd="@dimen/dim_btn"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/to_reg_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Еще не зарегистрированы? Регистрация "
        android:textColor="@color/white_pale"
        android:textColorLink="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>